@@ -27,6 +27,9 @@
    <!ENTITY supported-powerpc.xml       SYSTEM "##SRCPATH##/hardware/supported/powerpc.xml">
    <!ENTITY supported-s390.xml          SYSTEM "##SRCPATH##/hardware/supported/s390.xml">
    <!ENTITY supported-sparc.xml         SYSTEM "##SRCPATH##/hardware/supported/sparc.xml">
+  <!ENTITY network-cards.xml            SYSTEM "##SRCPATH##/hardware/network-cards.xml">
+  <!ENTITY supported-peripherals.xml    SYSTEM "##SRCPATH##/hardware/supported-peripherals.xml">
+  <!ENTITY buying-hardware.xml          SYSTEM "##SRCPATH##/hardware/buying-hardware.xml">
   <!ENTITY installation-media.xml       SYSTEM "##SRCPATH##/hardware/installation-media.xml">
   <!ENTITY supported-peripherals.xml    SYSTEM "##SRCPATH##/hardware/supported-peripherals.xml">
   <!ENTITY memory-disk-requirements.xml SYSTEM "##SRCPATH##/hardware/memory-disk-requirements.xml">
