@@ -13,9 +13,8 @@ about hardware supported by GNU and Linux.
 </para>
 
 &hardware-supported.xml;
+&buying-hardware.xml;
 &installation-media.xml;
-&supported-peripherals.xml;
 &memory-disk-requirements.xml;
-&network-cards.xml;
 
 </chapter>
